force-app/main/default/objects/Contact/fields/salesintelio__Attempted_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Attempted_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>SalesIntel has read the record and has attempted to enrich the data.</inlineHelpText>
    <label>Attempted Enrichment</label>
    <type>Checkbox</type>
</CustomField>