force-app/main/default/objects/Contact/fields/salesintelio__Buying_Center_Enriched__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Buying_Center_Enriched__c</fullName>
    <label>Buying Center Enriched</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>