force-app/main/default/objects/Contact/fields/salesintelio__Last_Attempted_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Last_Attempted_Enrichment__c</fullName>
    <inlineHelpText>Last date that SalesIntel attempted to add data to the record.</inlineHelpText>
    <label>Last Attempted Enrichment</label>
    <type>Date</type>
</CustomField>