force-app/main/default/objects/Contact/fields/salesintelio__Last_Matched_Date__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__Last_Matched_Date__c</fullName>
    <inlineHelpText>Matched Date would indicate that the record has matched to a record in the SalesIntel Data base. If the data has enriched or not.</inlineHelpText>
    <label>Last Matched Date</label>
    <type>Date</type>
</CustomField>