force-app/main/default/objects/Contact/fields/salesintelio__SalesIntel_Changed_Job__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Changed_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SalesIntel Changed Job</label>
    <type>Checkbox</type>
</CustomField>