force-app/main/default/objects/Contact/fields/salesintelio__SalesIntel_Job_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Job_Change_Date__c</fullName>
    <description>Field to capture date on which salesintel job changed</description>
    <inlineHelpText>Date that job changed.</inlineHelpText>
    <label>SalesIntel Job Change Date</label>
    <type>Date</type>
</CustomField>