force-app/main/default/objects/Contact/fields/salesintelio__SalesIntel_Machine_Verified__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Machine_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If an enrichment was attempted but the record is marked as Machine verified in the SalesIntel database then the box will be checked TRUE.</inlineHelpText>
    <label>SalesIntel Machine Verified(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>