force-app/main/default/objects/Contact/fields/salesintelio__SalesIntel_Up_to_Date__c.field-meta.xml
<CustomField>
    <fullName>salesintelio__SalesIntel_Up_to_Date__c</fullName>
    <formula>salesintelio__Last_Matched_Date__c  &gt;=  salesintelio__Last_Enriched_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If your last match date is greater than or equal to your last enriched date then you are up to date. Each time the record is updated this formula will fire.</inlineHelpText>
    <label>SalesIntel Up-to-Date</label>
    <type>Checkbox</type>
</CustomField>