force-app/main/default/objects/Contact/fields/Status_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Status_Code_Name__c</fullName>
    <label>Status Code Name</label>
    <length>510</length>
    <type>LongTextArea</type>
</CustomField>