force-app/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;ACDT (UTC+10:30)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ACST (UTC+09:30)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ACT (UTC-05:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ACWST (UTC+08:45)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ADT (UTC-03:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AEDT (UTC+11:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AEST (UTC+10:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AFT (UTC+04:30)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AKDT (UTC-08:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AKST (UTC-09:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ALMT (UTC+06:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AMST (UTC-03:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AMT (UTC-04:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ANAT (UTC+12:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AQTT (UTC+05:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;ART (UTC-03:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AST (UTC+03:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AST (UTC-04:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AWST (UTC+08:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AZOST (UTC+00:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AZOT (UTC-01:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;AZT (UTC+04:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BDT (UTC+08:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BIOT (UTC+06:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BIT (UTC-12:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BOT (UTC-04:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BRST (UTC-02:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BRT (UTC-03:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BST (UTC+06:00)&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;BST (UTC+01:00)&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>