force-app/main/default/objects/Contact/fields/Unified_Individual_Id__c.field-meta.xml
<CustomField>
    <fullName>Unified_Individual_Id__c</fullName>
    <description>The unified individual id from Data 360 identity resolution.</description>
    <label>Unified Individual Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>