force-app/main/default/objects/Contact/fields/Workday_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Workday_Contact_Id__c</fullName>
    <label>Workday Contact Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>