force-app/main/default/objects/Contact/fields/Workday_MobilePhone_Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Workday_MobilePhone_Country_ISO_Code__c</fullName>
    <label>Mobile Phone Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_3166_1_alpha_3</valueSetName>
    </valueSet>
</CustomField>