force-app/main/default/objects/Contact/fields/Workday_MobilePhone_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Workday_MobilePhone_Device_Type__c</fullName>
    <defaultValue>&quot;Mobile&quot;</defaultValue>
    <label>Workday MobilePhone Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>