force-app/main/default/objects/Contact/fields/Workday_MobilePhone_Public__c.field-meta.xml
<CustomField>
    <fullName>Workday_MobilePhone_Public__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Workday MobilePhone Public</label>
    <type>Checkbox</type>
</CustomField>