force-app/main/default/objects/Contact/fields/Workday_Phone_Country_ISO_Code__c.field-meta.xml
<CustomField>
    <fullName>Workday_Phone_Country_ISO_Code__c</fullName>
    <description>Stores the ISO 3166-1 alpha-3 country code (e.g., “ARG”, “USA”, “GBR”) corresponding to the contact’s Phone country.</description>
    <label>Phone Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ISO_3166_1_alpha_3</valueSetName>
    </valueSet>
</CustomField>