force-app/main/default/objects/Contact/fields/Workday_Phone_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Workday_Phone_Device_Type__c</fullName>
    <defaultValue>&quot;Landline&quot;</defaultValue>
    <label>Workday Phone Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>