force-app/main/default/objects/Contact/fields/Workday_Phone_International_Phone_Code__c.field-meta.xml
<CustomField>
    <fullName>Workday_Phone_International_Phone_Code__c</fullName>
    <description>Returns the international dialing code (without the “+”) based on the country’s ISO 3166-1 alpha-3 code stored in Workday_Phone_Country_ISO_Code__c. Required by Workday.</description>
    <formula>CASE(
Workday_Phone_Country_ISO_Code__c,
&quot;AND&quot;,&quot;376&quot;,
&quot;ARE&quot;,&quot;971&quot;,
&quot;AFG&quot;,&quot;93&quot;,
&quot;ATG&quot;,&quot;1&quot;,
&quot;AIA&quot;,&quot;1&quot;,
&quot;ALB&quot;,&quot;355&quot;,
&quot;ARM&quot;,&quot;374&quot;,
&quot;AGO&quot;,&quot;244&quot;,
&quot;ARG&quot;,&quot;54&quot;,
&quot;AUT&quot;,&quot;43&quot;,
&quot;AUS&quot;,&quot;61&quot;,
&quot;ABW&quot;,&quot;297&quot;,
&quot;BRB&quot;,&quot;1&quot;,
&quot;BGD&quot;,&quot;880&quot;,
&quot;BEL&quot;,&quot;32&quot;,
&quot;BGR&quot;,&quot;359&quot;,
&quot;BHR&quot;,&quot;973&quot;,
&quot;BDI&quot;,&quot;257&quot;,
&quot;BEN&quot;,&quot;229&quot;,
&quot;BOL&quot;,&quot;591&quot;,
&quot;BRA&quot;,&quot;55&quot;,
&quot;BHS&quot;,&quot;1&quot;,
&quot;BTN&quot;,&quot;975&quot;,
&quot;BWA&quot;,&quot;267&quot;,
&quot;BLR&quot;,&quot;375&quot;,
&quot;BLZ&quot;,&quot;501&quot;,
&quot;CAN&quot;,&quot;1&quot;,
&quot;COD&quot;,&quot;243&quot;,
&quot;CAF&quot;,&quot;236&quot;,
&quot;COG&quot;,&quot;242&quot;,
&quot;CHE&quot;,&quot;41&quot;,
&quot;CIV&quot;,&quot;225&quot;,
&quot;CHL&quot;,&quot;56&quot;,
&quot;CMR&quot;,&quot;237&quot;,
&quot;CHN&quot;,&quot;86&quot;,
&quot;COL&quot;,&quot;57&quot;,
&quot;CRI&quot;,&quot;506&quot;,
&quot;CUB&quot;,&quot;53&quot;,
&quot;CPV&quot;,&quot;238&quot;,
&quot;CUW&quot;,&quot;599&quot;,
&quot;CXR&quot;,&quot;61&quot;,
&quot;CYP&quot;,&quot;357&quot;,
&quot;CZE&quot;,&quot;420&quot;,
&quot;DEU&quot;,&quot;49&quot;,
&quot;DNK&quot;,&quot;45&quot;,
&quot;DMA&quot;,&quot;1&quot;,
&quot;DOM&quot;,&quot;1&quot;,
&quot;DZA&quot;,&quot;213&quot;,
&quot;ECU&quot;,&quot;593&quot;,
&quot;EST&quot;,&quot;372&quot;,
&quot;EGY&quot;,&quot;20&quot;,
&quot;ESH&quot;,&quot;212&quot;,
&quot;ERI&quot;,&quot;291&quot;,
&quot;ESP&quot;,&quot;34&quot;,
&quot;ETH&quot;,&quot;251&quot;,
&quot;FIN&quot;,&quot;358&quot;,
&quot;FJI&quot;,&quot;679&quot;,
&quot;FRA&quot;,&quot;33&quot;,
&quot;GAB&quot;,&quot;241&quot;,
&quot;GBR&quot;,&quot;44&quot;,
&quot;GRD&quot;,&quot;1&quot;,
&quot;GEO&quot;,&quot;995&quot;,
&quot;GUF&quot;,&quot;594&quot;,
&quot;GHA&quot;,&quot;233&quot;,
&quot;GIB&quot;,&quot;350&quot;,
&quot;GRL&quot;,&quot;299&quot;,
&quot;GMB&quot;,&quot;220&quot;,
&quot;GIN&quot;,&quot;224&quot;,
&quot;GLP&quot;,&quot;590&quot;,
&quot;GNQ&quot;,&quot;240&quot;,
&quot;GRC&quot;,&quot;30&quot;,
&quot;SGS&quot;,&quot;500&quot;,
&quot;GTM&quot;,&quot;502&quot;,
&quot;GUY&quot;,&quot;592&quot;,
&quot;HND&quot;,&quot;504&quot;,
&quot;HRV&quot;,&quot;385&quot;,
&quot;HTI&quot;,&quot;509&quot;,
&quot;HUN&quot;,&quot;36&quot;,
&quot;IDN&quot;,&quot;62&quot;,
&quot;IRL&quot;,&quot;353&quot;,
&quot;ISR&quot;,&quot;972&quot;,
&quot;IND&quot;,&quot;91&quot;,
&quot;IRQ&quot;,&quot;964&quot;,
&quot;IRN&quot;,&quot;98&quot;,
&quot;ISL&quot;,&quot;354&quot;,
&quot;ITA&quot;,&quot;39&quot;,
&quot;JEY&quot;,&quot;44&quot;,
&quot;JAM&quot;,&quot;1&quot;,
&quot;JOR&quot;,&quot;962&quot;,
&quot;JPN&quot;,&quot;81&quot;,
&quot;KEN&quot;,&quot;254&quot;,
&quot;KGZ&quot;,&quot;996&quot;,
&quot;KHM&quot;,&quot;855&quot;,
&quot;KIR&quot;,&quot;686&quot;,
&quot;PRK&quot;,&quot;850&quot;,
&quot;KOR&quot;,&quot;82&quot;,
&quot;KWT&quot;,&quot;965&quot;,
&quot;CYM&quot;,&quot;1&quot;,
&quot;KAZ&quot;,&quot;7&quot;,
&quot;LAO&quot;,&quot;856&quot;,
&quot;LBN&quot;,&quot;961&quot;,
&quot;LCA&quot;,&quot;1&quot;,
&quot;LIE&quot;,&quot;423&quot;,
&quot;LKA&quot;,&quot;94&quot;,
&quot;LBR&quot;,&quot;231&quot;,
&quot;LSO&quot;,&quot;266&quot;,
&quot;LTU&quot;,&quot;370&quot;,
&quot;LUX&quot;,&quot;352&quot;,
&quot;LVA&quot;,&quot;371&quot;,
&quot;LBY&quot;,&quot;218&quot;,
&quot;MAR&quot;,&quot;212&quot;,
&quot;MCO&quot;,&quot;377&quot;,
&quot;MDA&quot;,&quot;373&quot;,
&quot;MNE&quot;,&quot;382&quot;,
&quot;MAF&quot;,&quot;590&quot;,
&quot;MDG&quot;,&quot;261&quot;,
&quot;MKD&quot;,&quot;389&quot;,
&quot;MLI&quot;,&quot;223&quot;,
&quot;MMR&quot;,&quot;95&quot;,
&quot;MNG&quot;,&quot;976&quot;,
&quot;MAC&quot;,&quot;853&quot;,
&quot;MTQ&quot;,&quot;596&quot;,
&quot;MRT&quot;,&quot;222&quot;,
&quot;MSR&quot;,&quot;1&quot;,
&quot;MLT&quot;,&quot;356&quot;,
&quot;MUS&quot;,&quot;230&quot;,
&quot;MDV&quot;,&quot;960&quot;,
&quot;MWI&quot;,&quot;265&quot;,
&quot;MEX&quot;,&quot;52&quot;,
&quot;MYS&quot;,&quot;60&quot;,
&quot;MOZ&quot;,&quot;258&quot;,
&quot;NAM&quot;,&quot;264&quot;,
&quot;NCL&quot;,&quot;687&quot;,
&quot;NER&quot;,&quot;227&quot;,
&quot;NGA&quot;,&quot;234&quot;,
&quot;NIC&quot;,&quot;505&quot;,
&quot;NLD&quot;,&quot;31&quot;,
&quot;NOR&quot;,&quot;47&quot;,
&quot;NPL&quot;,&quot;977&quot;,
&quot;NZL&quot;,&quot;64&quot;,
&quot;OMN&quot;,&quot;968&quot;,
&quot;PAN&quot;,&quot;507&quot;,
&quot;PER&quot;,&quot;51&quot;,
&quot;PYF&quot;,&quot;689&quot;,
&quot;PNG&quot;,&quot;675&quot;,
&quot;PHL&quot;,&quot;63&quot;,
&quot;PAK&quot;,&quot;92&quot;,
&quot;POL&quot;,&quot;48&quot;,
&quot;PCN&quot;,&quot;64&quot;,
&quot;PRT&quot;,&quot;351&quot;,
&quot;PRY&quot;,&quot;595&quot;,
&quot;QAT&quot;,&quot;974&quot;,
&quot;REU&quot;,&quot;262&quot;,
&quot;ROU&quot;,&quot;40&quot;,
&quot;SRB&quot;,&quot;381&quot;,
&quot;RUS&quot;,&quot;7&quot;,
&quot;RWA&quot;,&quot;250&quot;,
&quot;SAU&quot;,&quot;966&quot;,
&quot;SLB&quot;,&quot;677&quot;,
&quot;SYC&quot;,&quot;248&quot;,
&quot;SDN&quot;,&quot;249&quot;,
&quot;SWE&quot;,&quot;46&quot;,
&quot;SGP&quot;,&quot;65&quot;,
&quot;SVN&quot;,&quot;386&quot;,
&quot;SVK&quot;,&quot;421&quot;,
&quot;SLE&quot;,&quot;232&quot;,
&quot;SMR&quot;,&quot;378&quot;,
&quot;SEN&quot;,&quot;221&quot;,
&quot;SOM&quot;,&quot;252&quot;,
&quot;SUR&quot;,&quot;597&quot;,
&quot;SSD&quot;,&quot;211&quot;,
&quot;STP&quot;,&quot;239&quot;,
&quot;SLV&quot;,&quot;503&quot;,
&quot;SXM&quot;,&quot;1&quot;,
&quot;SYR&quot;,&quot;963&quot;,
&quot;SWZ&quot;,&quot;268&quot;,
&quot;TCA&quot;,&quot;1&quot;,
&quot;TCD&quot;,&quot;235&quot;,
&quot;ATF&quot;,&quot;262?&quot;,
&quot;TGO&quot;,&quot;228&quot;,
&quot;THA&quot;,&quot;66&quot;,
&quot;TJK&quot;,&quot;992&quot;,
&quot;TKM&quot;,&quot;993&quot;,
&quot;TUN&quot;,&quot;216&quot;,
&quot;TON&quot;,&quot;676&quot;,
&quot;TUR&quot;,&quot;90&quot;,
&quot;TTO&quot;,&quot;1&quot;,
&quot;TUV&quot;,&quot;688&quot;,
&quot;TWN&quot;,&quot;886&quot;,
&quot;TZA&quot;,&quot;255&quot;,
&quot;UKR&quot;,&quot;380&quot;,
&quot;UGA&quot;,&quot;256&quot;,
&quot;USA&quot;,&quot;1&quot;,
&quot;URY&quot;,&quot;598&quot;,
&quot;UZB&quot;,&quot;998&quot;,
&quot;VEN&quot;,&quot;58&quot;,
&quot;VGB&quot;,&quot;1&quot;,
&quot;VNM&quot;,&quot;84&quot;,
&quot;WSM&quot;,&quot;685&quot;,
&quot;YEM&quot;,&quot;967&quot;,
&quot;ZAF&quot;,&quot;27&quot;,
&quot;ZMB&quot;,&quot;260&quot;,
&quot;ZWE&quot;,&quot;263&quot;,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Code</label>
    <type>Text</type>
</CustomField>