force-app/main/default/objects/Contact/fields/Workday_Phone_Primary__c.field-meta.xml
<CustomField>
    <fullName>Workday_Phone_Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Workday Phone Primary</label>
    <type>Checkbox</type>
</CustomField>