force-app/main/default/objects/Contact/fields/Workday_Phone_Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Workday_Phone_Usage_Type__c</fullName>
    <defaultValue>&quot;Work&quot;</defaultValue>
    <label>Workday Phone Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>