force-app/main/default/objects/Contact/fields/Workday_Sync_Payload__c.field-meta.xml
<CustomField>
    <fullName>Workday_Sync_Payload__c</fullName>
    <label>Workday Sync Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>