force-app/main/default/objects/Contact/validationRules/AccountId_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountId_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>