force-app/main/default/objects/Contact/validationRules/FirstName_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_Required</fullName>
    <active>true</active>
    <description>Workday requires First Name on Contacts for Order submission. The standard Name composite on the Lightning page only enforces Last Name, so this rule ensures First Name is also populated.</description>
    <errorConditionFormula>AND(
    NOT($Permission.Bypass_Validation_Rules),
    ISBLANK(FirstName)
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is required.</errorMessage>
</ValidationRule>