force-app/main/default/objects/Contact/validationRules/salesintelio__ContactEmailValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>salesintelio__ContactEmailValidation</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please Select Email</errorMessage>
</ValidationRule>