force-app/main/default/objects/Contact/validationRules/Workday_Mobile_Phone_Country.validationRule-meta.xml
<ValidationRule>
    <fullName>Workday_Mobile_Phone_Country</fullName>
    <active>true</active>
    <description>Workday requires a country code for all phone numbers. This validation rule ensures that a country code is entered whenever a phone number is provided.</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Validation_Rules),				NOT($Permission.Exclude_from_Workday_Phone_Validation), 
    NOT(ISBLANK(MobilePhone)),
    ISBLANK(TEXT( Workday_MobilePhone_Country_ISO_Code__c))
)</errorConditionFormula>
    <errorDisplayField>Workday_MobilePhone_Country_ISO_Code__c</errorDisplayField>
    <errorMessage>Please select a country for the Mobile Phone number before saving.</errorMessage>
</ValidationRule>