force-app/main/default/objects/Contact/listViews/Fortra_Academy_Contacts.listView-meta.xml
<ListView>
    <fullName>Fortra_Academy_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fortra_Academy_Access__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Fortra Academy Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>