force-app/main/default/objects/Contact/listViews/Globalscape.listView-meta.xml
<ListView>
    <fullName>Globalscape</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>contains</operation>
        <value>tripwire,globalscape</value>
    </filters>
    <label>Globalscape</label>
</ListView>